# happy-faster-code

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  logo.txt  logo_color.txt  pyproject.toml
.github/workflows/: publish-homebrew.yml  release-binaries.yml
adapters/: README.md
adapters/all_in_one/: README.md
adapters/mcp/: README.md
adapters/skills/: README.md
adapters/tool_contracts/: code_graph_tools.json
app-server/tests/suite/: user_agent.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: codex.rs  util.rs
core/src/state/: service.rs
core/src/tools/: router.rs  spec.rs
core/src/tools/handlers/: code_graph.rs  mod.rs
core/src/tools/js_repl/: mod.rs
crates/happy-cli/: Cargo.toml
crates/happy-cli/src/: agent.rs  config.rs  main.rs  repo.rs  tools.rs
crates/happy-cli/src/provider/: anthropic.rs  mod.rs  openai.rs
crates/happy-cli/src/tui/: mod.rs  theme.rs
crates/happy-core/: Cargo.toml
crates/happy-core/src/: lib.rs  py.rs
crates/happy-core/src/global_index/: mod.rs  module_resolver.rs  symbol_resolver.rs
crates/happy-core/src/graph/: mod.rs  queries.rs  types.rs
crates/happy-core/src/indexer/: element.rs  mod.rs  walker.rs
crates/happy-core/src/parser/: calls.rs  imports.rs  languages.rs  mod.rs
crates/happy-core/src/store/: mod.rs
crates/happy-core/src/utils/: mod.rs
crates/happy-core/src/vector/: bm25.rs  cosine.rs  hnsw.rs  mod.rs
crates/happy-core/src/watcher/: mod.rs
docs/: Detailed Technical Design_ HappyFasterCode.md  Detailed Technical Design_ happycode.md  Integration Tiers.md  Solution Design Document_ HappyFasterCode (Rust-Native Edition).md  Solution Design Document_ happycode (Rust-Native Edition).md
python/happy_code/: __init__.py  config.py  launch.py  orchestrator.py  worker.py
python/happy_faster_code/: __init__.py  config.py  graph_rpc.py  integration.py  launch.py  orchestrator.py  rlm_tools.py  volt_memory.py  worker.py
scripts/: verify_code_graph_contract.py
tests/python/: test_happy_repo.py  test_launch.py  test_rlm.py
tui/src/onboarding/: welcome.rs
