[package]
name = "happy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for HappyFasterCode code indexing and querying"

[[bin]]
name = "happycode"
path = "src/main.rs"

[dependencies]
happy-core = { path = "../happy-core" }
clap.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json = "1"
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio-stream.workspace = true
eventsource-stream.workspace = true
async-trait.workspace = true
ratatui.workspace = true
crossterm.workspace = true
toml.workspace = true
