[package]
name = "happy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-performance code indexing and graph engine for HappyFasterCode"

[lib]
name = "happy_core"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
tree-sitter.workspace = true
petgraph.workspace = true
rayon.workspace = true
dashmap.workspace = true
serde.workspace = true
bincode.workspace = true
blake3.workspace = true
smol_str.workspace = true
ignore.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true

pyo3 = { workspace = true, optional = true }

# Tree-sitter language grammars
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"

[dev-dependencies]
tempfile = "3"
